# boilerplate-python

./: Dockerfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-pr-review.yml  docker-ci.yml  docker-publish.yml  python-ci.yml  python-publish.yml  scorecards.yml
doctrees/: environment.pickle
doctrees/api/: boilerplate_python.doctree  flask_app.doctree  my_project.doctree
html/: genindex.html  index.html  py-modindex.html  searchindex.js
html/_modules/: index.html
html/_modules/flask_app/: hello_world.html
html/_modules/my_project/: skeleton.html
html/api/: boilerplate_python.html  flask_app.html  modules.html  my_project.html
